<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".films.TwentiethCenturyGirl">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/fullimage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/century_girl"
        app:shapeAppearanceOverlay="@style/roundimageview" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title1"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintTop_toBottomOf="@id/fullimage"
        app:layout_constraintBottom_toTopOf="@id/fulltext"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/country"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/south_korea"
        android:textSize="15sp"
        android:textColor="@color/grey"
        app:layout_constraintBottom_toTopOf="@id/fulltext"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintVertical_bias="0.17" />

    <TextView
        android:id="@+id/duration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/_199_min"
        android:textSize="15sp"
        android:textColor="@color/grey"
        app:layout_constraintBottom_toTopOf="@id/fulltext"
        app:layout_constraintStart_toEndOf="@id/country"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintVertical_bias="0" />

    <TextView
        android:id="@+id/genre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/coming_of_age"
        android:textSize="15sp"
        android:textColor="@color/grey"
        app:layout_constraintBottom_toTopOf="@id/fulltext"
        app:layout_constraintStart_toEndOf="@id/duration"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintVertical_bias="0"  />

    <TextView
        android:id="@+id/fulltext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/synopsis1"
        android:textSize="18sp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/country" />

    <TextView
        android:id="@+id/credit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/credit"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/fulltext"
        app:layout_constraintStart_toStartOf="parent"/>

    <LinearLayout
        android:id="@+id/director"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/credit"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="5dp">

        <TextView
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/director"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bang_woo_ri" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/cast"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/director"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="5dp">

        <TextView
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/cast"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kim_you_jung_byeon_woo_seok_roh_yoon_seo_park_jung_woo" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/production"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cast"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="5dp">

        <TextView
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/production"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yong_film_inc" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/sales"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/production"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="5dp">

        <TextView
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/world_sales"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/netflix" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/red"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Check Schedules"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="20sp"
            />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>